fix overflow

--- a/src/components/form/style.css
+++ b/src/components/form/style.css
@@ -11,7 +11,8 @@
   height: 100%;
   width: 100%;
   border-radius: 10px;
-  padding: 20px 10px 10px 10px;
+  padding: 20px 130px 10px 10px;
+  text-align: right;
 }
 .field label {
   position: absolute;
@@ -40,4 +41,8 @@
   width: 20px;
   height: 20px;
   margin-right: 5px;
+}
+
+.field input:focus {
+  outline: none;
 }
